@@ -1,13 +1,11 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
-
-    // 2024/3/29現在、Java 19までがサポートなので対応待ち
-    id 'org.beryx.runtime' version '1.13.1'
+    id 'project-report'
 }
 
 group = 'io.github.k7t3'
-version = '1.0.0'
+version = project.findProperty("app.version") ?: '1.0.0-dev'
 
 repositories {
     mavenCentral()
@@ -27,12 +25,12 @@ compileTestJava {
 }
 
 javafx {
-    version = '22'
-    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
+    version = '22.0.1'
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing' ]
 }
 
 application {
-    mainClass = 'com.github.k7t3.tcv.view.TCVApp'
+    mainClass = 'com.github.k7t3.tcv.view.Launcher'
     applicationName = 'Twitch Chat Viewer'
 }
 
@@ -43,10 +41,17 @@ dependencies {
     implementation 'org.slf4j:slf4j-jdk14:2.0.11'
 
     // Twitchクライアント
-    implementation 'com.github.twitch4j:twitch4j:1.19.0'
+    // TODO 必要なモジュールのみにする
+    implementation 'com.github.twitch4j:twitch4j:1.21.0'
 
     // キャッシュ
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+
+    // 永続化
+    implementation 'org.xerial:sqlite-jdbc:3.45.3.0'
+
+    // Twitch認証用のQRコード生成
+    implementation 'com.google.zxing:javase:3.5.3'
 
     // AtlantaFXと同じアイコンパックを使用する
     implementation 'io.github.mkpaz:atlantafx-base:2.0.1'
@@ -63,27 +68,128 @@ dependencies {
     // チャットビュー用のVirtualFlow
     implementation 'org.fxmisc.flowless:flowless:0.7.2'
 
+    // テスト
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    testImplementation 'org.testfx:testfx-junit5:4.0.18'
+    testImplementation 'org.testfx:openjfx-monocle:21.0.2' // headless
+
+    testImplementation 'org.assertj:assertj-core:3.13.2'
+    testImplementation 'org.hamcrest:hamcrest:2.1'
+
+
+    testImplementation 'org.mockito:mockito-core:5.11.0'
 }
 
-/**
- * 2024/3/28 現在、org.beryx.runtimeプラグインのJavaの対応バージョンは19までなので使用不可。
- */
-runtime {
-    options = [ '--strip-debug', '--compress', 'zip-6', '--no-header-files', '--no-man-pages' ]
+// SSL通信のためにjdk.crypto.ecモジュールが必要
+// https://stackoverflow.com/questions/63932217/java-ssl-handshake-failure-if-app-built-with-jpackage
+def cryptoPackage = 'jdk.crypto.ec'
 
-    launcher {
-        noConsole = true
+def jdkModules = ''
+tasks.register('checkJDKModules', Exec) {
+    dependsOn jar, copyDependencies, copyJavaFXModules
+
+    // プラットフォームに依存したクラスパスのセパレータ
+    var s = org.gradle.internal.os.OperatingSystem.current().isWindows()
+            ? ';'
+            : ':'
+
+    commandLine 'jdeps',
+            '--add-modules', 'ALL-MODULE-PATH',
+            '--multi-release', '9',
+            '--ignore-missing-deps',
+            '--print-module-deps',
+            '--class-path', "build/libs/*${s}build/javafx/*",
+            "build/libs/${-> tasks.jar.archiveFile.get().asFile.name}"
+
+    standardOutput = new ByteArrayOutputStream()
+    ext.output = { return standardOutput.toString().trim() }
+    doLast {
+        jdkModules = output()
+        if (!jdkModules.contains(cryptoPackage)) {
+            jdkModules += ',' + cryptoPackage
+        }
+    }
+}
+
+tasks.register('copyDependencies', Copy) {
+    from configurations.runtimeClasspath
+    into 'build/libs'
+    exclude 'javafx-**'
+}
+
+tasks.register('copyJavaFXModules', Copy) {
+    from configurations.runtimeClasspath
+    into 'build/javafx'
+    include 'javafx-**'
+}
+
+def deployDir = 'build/app'
+tasks.register('make', Exec) {
+    group = 'distribution'
+    description = 'アプリケーションパッケージを生成するタスク'
+    dependsOn checkJDKModules
+
+    doFirst {
+        delete deployDir
     }
 
-    jpackage {
-        imageName = 'twitch-chat-viewer'
-        skipInstaller = true
-        appVersion = version
+    ArrayList<String> commandArgs = [
+            'jpackage',
+            '--verbose',
+            '--name', 'Twitch Chat Viewer',
+            '--description', 'Chat Viewer for twitch.tv',
+            '--copyright', 'Copyright (c) 2024 k7t3. All rights reserved.',
+            '--vendor', 'k7t3',
+            // バージョンの末尾に文字があると違反になるため取り除く処置
+            '--app-version', version.toString().replaceAll('\\D+$', ''),
+            '--dest', deployDir,
+            '--module-path', 'build/javafx',
+            '--add-modules', "${-> jdkModules},${javafx.modules.join(',')}",
+            '--input', 'build/libs',
+            '--main-jar', "${-> tasks.jar.archiveFile.get().asFile.name}",
+            '--main-class', application.mainClass.get(),
+            '--license-file', 'docs/license.md',
+            '--java-options', "'-Dapp.version=${version}'"
+    ]
+
+    def os = org.gradle.internal.os.OperatingSystem.current()
+
+    if (os.isWindows()) {
+        commandArgs.addAll('--type', 'msi')
+        commandArgs.addAll('--icon', 'src/main/resources/icons/TwitchChatViewer.ico')
+        commandArgs.addAll('--win-shortcut')
+        commandArgs.addAll('--win-menu')
+        commandArgs.addAll('--win-per-user-install')
+        commandArgs.addAll('--win-shortcut')
+        commandArgs.addAll('--win-upgrade-uuid', 'b78817e8-f9b8-4650-bf0a-34bca5ff4106')
     }
+    else if (os.isMacOsX()) {
+        commandArgs.addAll('--type', 'dmg')
+        commandArgs.addAll('--icon', 'src/main/resources/icons/TwitchChatViewer.icns')
+        commandArgs.addAll('--mac-package-identifier', 'TwitchChatViewer')
+    }
+    else if (os.isLinux()) {
+        commandArgs.addAll('--type', 'deb')
+        commandArgs.addAll('--icon', 'src/main/resources/icons/TwitchChatViewer-64.png')
+        commandArgs.addAll('--linux-menu-group', 'Network')
+        commandArgs.addAll('--linux-rpm-license-type', 'Apache-2.0')
+        commandArgs.addAll('--linux-shortcut')
+    }
+
+    commandLine commandArgs
 }
 
 test {
+    if (!project.hasProperty("headless") || project.headless == "true") {
+        // execute TestFX Tests headless -- switch off by using ./gradlew -Pheadless=false
+        systemProperty("testfx.robot", "glass")
+        systemProperty("testfx.headless", "true")
+        systemProperty("prism.order", "sw")
+        systemProperty("prism.text", "t2k")
+        systemProperty("headless.geometry", "1600x1200-32")
+    }
+
     useJUnitPlatform()
 }
